[package]
name = "trusty-mpm-client"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared daemon HTTP client, command model, and executor for trusty-mpm UIs"

[lib]
name = "trusty_mpm_client"
path = "src/lib.rs"

[dependencies]
trusty-mpm-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# The daemon's real `api::router` + `DaemonState` drive deterministic
# in-process HTTP tests for the executor (no live daemon needed).
trusty-mpm-daemon = { path = "../trusty-mpm-daemon" }
axum.workspace = true
tempfile.workspace = true
