[package]
name = "trusty-mpm-core"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, artifact model, and IPC protocol for trusty-mpm"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
gray_matter.workspace = true
walkdir.workspace = true
dirs.workspace = true
sha2.workspace = true
utoipa.workspace = true

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile.workspace = true
