[package]
name = "trusty-mpm-daemon"
version.workspace = true
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Long-running trusty-mpm daemon: session control, hook interception, artifact serving"

[lib]
name = "trusty_mpm_daemon"
path = "src/lib.rs"

[[bin]]
name = "trusty-mpmd"
path = "src/main.rs"

[dependencies]
trusty-mpm-core.workspace = true
trusty-mpm-mcp.workspace = true
trusty-common = { workspace = true, features = ["mcp"] }
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
dirs.workspace = true
notify.workspace = true
walkdir.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
http-body-util.workspace = true

# End-to-end regression suite: spawns a real daemon on a loopback port and
# drives it over HTTP. Lives in its own test binary so the module tree compiles
# once and the daemon-spawning harness is shared across every scenario file.
[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
